@@ -14,6 +14,7 @@ Bugfixes:
   the old keyboard shortcuts can still be used when the tree has focus
 
 Code changes:
+- created subclasses of Entry class for the various entry types
 - added config_get() and config_connect() convenience functions
 
 
